code updated on 16 Dec